chore: Update Badge and Button components for responsive design and fix text wrapping issue

--- a/components/Badge/styles.module.scss
+++ b/components/Badge/styles.module.scss
@@ -5,7 +5,6 @@
   border-style: solid;
   border-radius: 40px;
   width: fit-content;
-  height: 30px;
   overflow: hidden;
   margin: auto;
 
