--- a/components/Texts/styles.module.scss
+++ b/components/Texts/styles.module.scss
@@ -21,6 +21,9 @@
 .caption {
   font-size: 14px;
   line-height: 100%;
+  white-space: wrap;
+  max-width: 90%;
+
 }
 
 .nav_caption {
