--- a/styles/swiper.css
+++ b/styles/swiper.css
@@ -51,20 +51,20 @@
 @media (max-width: 768px) {
 
   .swiper-pagination {
-      bottom: -38px !important;
+      bottom: -8px !important;
 
   }
 
 
   .swiper-button-next {
     right: 20px;
-  bottom: -56px !important;
+  bottom: -20px !important;
 
   }
 
   .swiper-button-prev {
     left: 20px;
-   bottom: -56px !important;
+   bottom: -20px !important;
 
 
   }
